fix layout bug

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -144,7 +144,7 @@ a.dark-mode {
   flex: 1;
   margin-left: 3rem;
 }
-.right-side ul {
+.right-side ul{
   margin: 0;
 }
 .right-side li {
@@ -157,7 +157,7 @@ a.dark-mode {
 }
 .sub-menu{
   margin-top: 8.3rem;
-  max-width: 15vw;
+  max-width: 250px;
 }
 .layout-options {
   position: fixed;
@@ -309,14 +309,17 @@ footer {
   .news {
     display: none;
   }
-  .sub-menu {
+  .sub-menu, .dates {
     margin-top: 2vh;
   }
-  .right-side .sub-menu ul {
+  .right-side .sub-menu ul {
     padding: 0;
   }
+  .sub-menu {
+    max-width: 80vw;
+  }
   .sub-menu li{
-    display: inline-block;
+    display: inline;
   }
   footer {
     display: none;
